estrutura do painel principal

--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
 					<li class="menu-item"><a href="#">Palestrantes</a></li>
 				</ul>
 		</nav>
+		<!-- classe de destaque jumbotron -->
+		<div class="jumbotron">
+			<!-- dentro do header temos duas seções distintas, usamos a tag section. 
+			Ela serve para dar um contexto a um conjunto de
+			elementos e pode ser uma tag de destaque ou não. Na primeira seção, 
+			usamos h1 para destacar o nome do evento, já na
+			segunda temos apenas uma lista de navegação. -->
+
+			<!-- classe panel-main é do painel principal -->
+			<section class="panel-main">
+				<!-- titulo e subtitulo-->
+				<h1 class="title">ALURACONF</h1>
+				<h2 class="subtitle">30MAIO|RIO</h2>
+			</section >
+
+				<!-- estilizar o botão -->
+			<section class="panel-subscribe">
+					<a href="#" class="button">Inscreva-se</a>
+			</section>
+		</div>
 	
 	</header>
 </body>
