Estrutura e estilo do Painel sobre

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<title>Front-end</title>
 	<!-- importar o css -->
 	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/about.css">
 </head>
 <body>
 	<!-- cabeçalho semântico -->
@@ -41,7 +43,25 @@
 					<a href="#" class="button">Inscreva-se</a>
 			</section>
 		</div>
-	
 	</header>
+
+	<section class="panel panel-about">
+		<!--/* espaçamento do conteúdo tanto na esquerda, quanto na direita */ 
+			O conteúdo vai ficar dentro da div class="container no qual centralizar 
+		e colocar a margin -->
+		<div class="container">
+			<h2 class="title">Muito conteúdo: do frontend ao backend</h2>
+			<h3 class="subtitle">21 de Setembro de 2019</h3>
+
+			<div class="about-description">
+				<p>
+					Com a AluraConf abordaremos o que há de novidade e conhecimentos essenciais a um desenvolver mobile.
+				</p>
+				<p>É uma grande chance de ficar por dentro dos assuntos de Android, iOS, Web mobile, desenvolvimento híbrido, UX, além da
+					parte backend com Rest, Microservices, e BigData. O desenvolvedor atualizado vai estar aqui.
+				</p>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
