--- a/index.html
+++ b/index.html
@@ -63,5 +63,35 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="panel panel speakers">
+
+		<h2 class="title">PALESTRANTES</h2>
+		<h3 class="subtitle">Aprenda com palestrantes que são referencia no mercado</h3>
+
+		<!-- terá uma lista -->
+		<ul class="speakers">
+	
+			<li class="speaker">
+				<!-- cada lista terá uma figura -->
+				<figure class="speaker-portrait">
+
+					<img src="img/palestrantes/placeholder.jpeg" alt="foto do palestrante">
+
+					<figcaption class="speaker-name">
+						Tayná Rodrigues
+					</figcaption>
+
+					<p class="speaker-bio">
+						Desenvolvedora em treinamento através do curso da Alura/Caelum
+					</p>
+
+				</figure>
+
+				<p class="speaker-speach">To be or not to be MEAN</p>
+
+			</li>
+		</ul>
+	</section>
 </body>
 </html>
