--- a/index.html
+++ b/index.html
@@ -175,6 +175,18 @@
 								</li>
 		</ul>
 	</div>
-	</section>
+ </section>
+ <!-- Estrutura do formulário: É um form dentro de uma section que possui um título -->
+ <section>
+   <h2>Seus dados</h2>
+
+   <form>
+     <label>Nome</label>
+     <input>
+     <label>E-mail</label>
+     <input>
+     <button>REALIZAR INSCRIÇÃO</button>
+   </form>
+ </section>
 </body>
 </html>
