Estilização formulário - parte 2

--- a/index.html
+++ b/index.html
@@ -180,19 +180,19 @@
  <!-- Estrutura do formulário: É um form dentro de uma section que possui um título -->
  <section class="panel-form">
   <div class="container">
-    <h2>Seus dados</h2>
+    <h2 class="title">Seus dados</h2>
      <form>
-      <div class="field">
-        <label class="field-label">Nome</label>
-        <input class="field-input">
-      </div>
-      <div class="field">
-        <label class="field-label">E-mail</label>
-        <input class="field-input">
-      </div>
-      <div class="button-place">
-        <button>REALIZAR INSCRIÇÃO</button>
-      </div>
+       <div class="field">
+         <label>Nome</label>
+         <input class="field-input">
+       </div>
+       <div class="field">
+         <label>E-mail</label>
+         <input class="field-input">
+       </div>
+       <div class="button-place">
+         <button>REALIZAR INSCRIÇÃO</button>
+       </div>
      </form>
    </div>
  </section>
