Estilização formulário - parte 3. Está Pronta!!!

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
          <input class="field-input">
        </div>
        <div class="button-place">
-         <button>REALIZAR INSCRIÇÃO</button>
+         <button class="button">REALIZAR INSCRIÇÃO</button>
        </div>
      </form>
    </div>
